@@ -1,4 +1,5 @@
 Serf 0.1.1 []
+  Add SSL client certificate support
   Implement optimized iovec reads for header buckets
   Fix up 'make clean' and 'make distclean' (Issues 9, 10)
 
